# analyst-sql-agent

./: .dockerignore  .env.example  .gitignore  CASE_STUDY.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
db/: apply_schema.py  check_readonly.py  create_readonly_role.py  schema.sql  seed.py  verify.py
docs/: DECISIONS.md  PROGRESO.md  spec.md
evals/: cases.py  judge.py  run.py
src/analyst/: __init__.py  __main__.py  api.py  config.py  db.py  graph.py  llm.py  logging_utils.py  nodes.py  schema.py  state.py  ui.html
tests/: test_loop.py
