[project]
name = "analyst-sql-agent"
version = "0.1.0"
description = "Conversational SQL agent (NL->SQL, ES/EN) with a LangGraph self-correction loop over a fixed, read-only sales schema."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "faker>=30.0",
    # Phase 2 core: LangGraph orchestration + Anthropic (Haiku) for classify/generate/synthesize.
    "langgraph>=0.2",
    "anthropic>=0.40",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[project.scripts]
analyst = "analyst.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analyst"]
